update content from theme

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -69,6 +69,7 @@
     "social_tiktok_link": "",
     "social_facebook_link": "https:\/\/www.facebook.com\/cgearsandfreelife",
     "social_twitter_link": "",
+    "loading_image": "shopify:\/\/shop_images\/CGear-Logo-Outlined-02.png",
     "loading_image_width": 150,
     "loading_appearance": "once",
     "currency_code_enable": false,
