--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -73,8 +73,9 @@
     "loading_image_width": 150,
     "loading_appearance": "once",
     "currency_code_enable": false,
+    "favicon": "shopify:\/\/shop_images\/CGear-Icons.png",
     "info_page": "size-chart",
-    "checkout_logo_image": "shopify:\/\/shop_images\/CGear-Logo-01_828bb547-bca4-429a-8bc8-55a70eff88c9.png",
+    "checkout_logo_image": "shopify:\/\/shop_images\/CGear-Logo-Outlined-01.png",
     "checkout_logo_position": "left",
     "checkout_logo_size": "medium",
     "checkout_body_background_color": "#ffffff",
