update content from theme

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -10,6 +10,7 @@
     "type_heading_font": "news_gothic_no_2_n7",
     "heading_size": 110,
     "type_base_font": "neue_plak_n4",
+    "text_size": 120,
     "nav_font_weight": "bold",
     "nav_size": 100,
     "nav_caps": false,
@@ -40,11 +41,13 @@
     "show_payment_button": true,
     "max_inventory": 5,
     "cart_type": "drawer",
-    "cart_icon": "bag",
+    "cart_icon": "shopping_cart",
     "enable_cart_notes": false,
     "enable_gift_notes": false,
+    "enable_additional_buttons": true,
     "show_empty_cart_buttons": true,
     "empty_cart_buttons": "new-menu",
+    "show_free_shipping_message": false,
     "message": "Spend ||amount|| more for FREE AUS shipping.",
     "free_shipping_limit": "0",
     "cart_custom_message_text": "",
@@ -69,13 +72,13 @@
     "social_tiktok_link": "",
     "social_facebook_link": "https:\/\/www.facebook.com\/cgearsandfreelife",
     "social_twitter_link": "",
-    "loading_image": "shopify:\/\/shop_images\/CGear-Logo-Outlined-02.png",
+    "loading_image": "shopify:\/\/shop_images\/CGear-Logo-03.png",
     "loading_image_width": 150,
     "loading_appearance": "once",
     "currency_code_enable": false,
-    "favicon": "shopify:\/\/shop_images\/CGear-Icons.png",
+    "favicon": "shopify:\/\/shop_images\/Favicon_1.png",
     "info_page": "size-chart",
-    "checkout_logo_image": "shopify:\/\/shop_images\/CGear-Logo-Outlined-01.png",
+    "checkout_logo_image": "shopify:\/\/shop_images\/CGear-Logo-03.png",
     "checkout_logo_position": "left",
     "checkout_logo_size": "medium",
     "checkout_body_background_color": "#ffffff",
