update ocntent from theme

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -34,11 +34,11 @@
     "show_product_gray_bg": false,
     "variants_style": "boxes",
     "atc_button_style": "btn--solid-border",
-    "quick_buy": "quick_buy",
+    "quick_buy": "none",
     "quick_buy_image_layout": "small",
     "show_labels": true,
     "show_quantity": false,
-    "show_payment_button": true,
+    "show_payment_button": false,
     "max_inventory": 5,
     "cart_type": "drawer",
     "cart_icon": "shopping_cart",
